--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,10 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
-    
+        <configuration>
+                <source>7</source>
+                <target>7</target>
+            </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
